[add-on] [style] [minor] Added a style that prevents wrapping the "Add Ons" text in the "Account" section to the next line.

--- a/assets/scss/admin/account.scss
+++ b/assets/scss/admin/account.scss
@@ -166,6 +166,10 @@ label.fs-tag
         vertical-align: middle;
     }
 
+    thead {
+        white-space: nowrap;
+    }
+
     td:first-child,
     th:first-child
     {
